<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads_map</name>
  <version>0.1.0</version>
  <description>
    Map loading and route planning for the Autonomous Driving Stack.
    Downloads the Tempe, AZ road network from OpenStreetMap via osmnx and direct
    Overpass API queries, converts it to a SUMO network, and computes A* routes
    between addresses or lat/lon click-to-drive goals.
  </description>
  <maintainer email="denna@asu.edu">Dheeraj Kiran</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ads_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
