<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads_simulation</name>
  <version>0.1.0</version>
  <description>
    SUMO-based traffic simulation bridge for the Autonomous Driving Stack.
    Manages the ego vehicle in SUMO, spawns background traffic on the Tempe
    road network, and exposes surrounding vehicles as ROS2 perception messages.
  </description>
  <maintainer email="denna@asu.edu">Dheeraj Kiran</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ads_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
