<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads_simulation</name>
  <version>0.1.0</version>
  <description>
    SUMO-based simulation bridge for the Autonomous Driving Stack. Runs SUMO
    headless on the Tempe road network, resolves click-to-drive lat/lon goals
    to SUMO edges, spawns and drives the ego vehicle, and publishes its state.
    Also provides the Pygame OpenStreetMap viewer for route visualization and
    click-to-drive pin placement.
  </description>
  <maintainer email="denna@asu.edu">Dheeraj Kiran</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ads_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
