<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads_simulation</name>
  <version>0.1.0</version>
  <description>
    SUMO-based simulation bridge for the Autonomous Driving Stack. Runs SUMO
    headless on the Tempe road network, resolves click-to-drive lat/lon goals
    to SUMO edges, spawns and drives the ego vehicle, spawns background
    traffic on the route's reverse-direction edges, and publishes lane and
    nearby-building geometry. Also provides the Pygame OpenStreetMap viewer
    for click-to-drive pin placement, and a WebSocket bridge (car3d_bridge)
    for a browser-based Three.js 3D viewer of the same route.
  </description>
  <maintainer email="denna@asu.edu">Dheeraj Kiran</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ads_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
