<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads_vehicle_state</name>
  <version>0.1.0</version>
  <description>
    Vehicle state simulation and diagnostic monitoring for the Autonomous Driving Stack (ADS).
    Provides a kinematic bicycle-model simulator that publishes VehicleState messages at 20 Hz,
    and a monitor node that tracks state transitions and rolling statistics for diagnostics.
  </description>
  <maintainer email="denna@asu.edu">Dheeraj Kiran</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ads_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
